# eyenet

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: current_experiment_summary.md  data_dictionary.md  dataset_registry.md  encoder_model_selection_summary.md  encoder_pretraining_preparation.md  engineering_protocol.md  engineering_state.md  experiment_protocol.md  external_dataset_acquisition.md  group_meeting_report_2026-05-28.docx  group_meeting_report_2026-05-28.md  model_design.md  model_profiles_and_next_steps.md  new_summary_encoder_dual_stream_closure.md  next_session_handoff.md  next_stage_dual_stream_plan.md  old_encoder_dual_stream_closure.md  preprocessing_protocol.md  project_architecture_review_2026-05-27.md  project_review_2026-05-28.md  project_status.md  pymovements_datasets.md  server_training_workflow.md
scripts/: README.md  add_encoder_subject_centered_position_features.py  analyze_attention_segments.py  analyze_dual_stream_fusion.py  analyze_ems_baseline.py  analyze_ems_qc_errors.py  analyze_multiseed_predictions.py  analyze_thresholds.py  audit_ems_dataset.py  audit_ems_subject_summary_features.py  audit_encoder_split_leakage.py  audit_onestop_fixations.py  build_crcns_eye1_fixation_events.py  build_ems_event_temporal_sequences.py  build_ems_events.py  build_ems_qc_filtered_tables.py  build_ems_subject_summary_features.py  build_encoder_ready_table.py  build_filtered_subject_splits.py  build_gazebase_fixation_events.py  build_hbn_fixation_events.py  build_onestop_fixation_events.py  build_subject_qc_report.py  (+53 more)
(+75 files in other folders)
