[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eyenet"
version = "0.1.0"
description = "Event-based eye movement modeling for adolescent mental health screening."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "joblib",
  "torch",
  "pyyaml",
  "openpyxl",
  "h5py",
  "pyarrow",
  "tqdm",
  "matplotlib",
  "seaborn",
  "pymovements",
  "python-docx",
]

[tool.setuptools.packages.find]
where = ["src"]
