[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eyenet"
version = "0.1.0"
description = "Event-based eye movement modeling for adolescent mental health screening."
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "scikit-learn",
  "joblib",
  "torch",
  "pyyaml",
  "openpyxl",
  "h5py",
  "pyarrow",
  "networkx",
  "tqdm",
  "matplotlib",
  "seaborn",
  "lightgbm",
  "shap",
  "pymovements",
  "python-docx",
  "mne",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
